@@ -278,8 +278,6 @@ Mode = function(x) {
 
 #' Random walk
 #'
-#' Internal soundgen function.
-#'
 #' Generates a random walk with flexible control over its range, trend, and
 #' smoothness. It works by calling \code{\link[stats]{rnorm}} at each step and
 #' taking a cumulative sum of the generated values. Smoothness is controlled by
@@ -301,13 +299,12 @@ Mode = function(x) {
 #'   with an upward and a downward curve. Larger absolute values of trend
 #'   produce less and less random behavior
 #' @return Returns a numeric vector of length len and range from 0 to rw_range.
-#' @keywords internal
+#' @keywords export
 #' @examples
-#' plot(soundgen:::getRandomWalk(len = 1000, rw_range = 5,
-#'   rw_smoothing = .2))
-#' plot(soundgen:::getRandomWalk(len = 1000, rw_range = 15,
+#' plot(getRandomWalk(len = 1000, rw_range = 5, rw_smoothing = .2))
+#' plot(getRandomWalk(len = 1000, rw_range = 15,
 #'   rw_smoothing = .2, trend = c(.5, -.5)))
-#' plot(soundgen:::getRandomWalk(len = 1000, rw_range = 15,
+#' plot(getRandomWalk(len = 1000, rw_range = 15,
 #'   rw_smoothing = .2, trend = c(15, -1)))
 getRandomWalk = function(len,
                          rw_range = 1,
@@ -315,7 +312,7 @@ getRandomWalk = function(len,
                          method = c('linear', 'spline')[2],
                          trend = 0) {
   if (len < 2)
-    return (rgamma(1, 1 / rw_range ^ 2, 1 / rw_range ^ 2))
+    return(rgamma(1, 1 / rw_range ^ 2, 1 / rw_range ^ 2))
 
   # generate a random walk (rw) of length depending on rw_smoothing,
   # then linear extrapolation to len
@@ -345,36 +342,33 @@ getRandomWalk = function(len,
   # normalize
   rw_normalized = rw_long - min(rw_long)
   rw_normalized = rw_normalized / max(abs(rw_normalized)) * rw_range
-  return (rw_normalized)
+  return(rw_normalized)
 }
 
 
 #' Discrete random walk
 #'
-#' Internal soundgen function.
-#'
 #' Takes a continuous random walk and converts it to continuous epochs of
 #' repeated values 0/1/2, each at least minLength points long. 0/1/2 correspond
 #' to different noise regimes: 0 = no noise, 1 = subharmonics, 2 = subharmonics
 #' and jitter/shimmer.
-#' @keywords internal
 #' @param rw a random walk generated by \code{\link{getRandomWalk}} (expected
 #'   range 0 to 100)
 #' @param nonlinBalance a number between 0 to 100: 0 = returns all zeros;
 #'   100 = returns all twos
 #' @param minLength the mimimum length of each epoch
 #' @param q1,q2 cutoff points for transitioning from regime 0 to 1 (q1) or from
-#'   regime 1 to 2 (q2)
+#'   regime 1 to 2 (q2). See noiseThresholdsDict for defaults
 #' @param plot if TRUE, plots the random walk underlying nonlinear regimes
 #' @return Returns a vector of integers (0/1/2) of the same length as rw.
-#' @keywords internal
+#' @keywords export
 #' @examples
-#' rw = soundgen:::getRandomWalk(len = 100, rw_range = 100, rw_smoothing = .2)
-#' r = soundgen:::getIntegerRandomWalk(rw, nonlinBalance = 75,
-#'                                      minLength = 10, plot = TRUE)
-#' r = soundgen:::getIntegerRandomWalk(rw, nonlinBalance = 15,
-#'                                     q1 = 30, q2 = 70,
-#'                                      minLength = 10, plot = TRUE)
+#' rw = getRandomWalk(len = 100, rw_range = 100, rw_smoothing = .2)
+#' r = getIntegerRandomWalk(rw, nonlinBalance = 75,
+#'                          minLength = 10, plot = TRUE)
+#' r = getIntegerRandomWalk(rw, nonlinBalance = 15,
+#'                          q1 = 30, q2 = 70,
+#'                          minLength = 10, plot = TRUE)
 getIntegerRandomWalk = function(rw,
                                 nonlinBalance = 50,
                                 minLength = 50,
